# uLocator

./: CMakeLists.txt  LICENSE
cmake/: uLocatorConfig.cmake.in
docs/: CMakeLists.txt
docs/manual/: Manual.dox  Overview.dox  TopicCorrections.dox  TopicInstall.dox  TopicLocation.dox  TopicTopography.dox  TopicUUSSRelocation.dox
include/private/: version.hpp.in
include/uLocator/: arrival.hpp  firstArrivalRayTracer.hpp  nlopt.hpp  nloptOptions.hpp  origin.hpp  quarry.hpp  rayTracer.hpp  sourceSpecificStationCorrection.hpp  staticCorrection.hpp  station.hpp  topography.hpp  travelTimeCalculator.hpp  travelTimeCalculatorMap.hpp  uussRayTracer.hpp  uussTravelTimeCalculator.hpp
include/uLocator/corrections/: sourceSpecific.hpp  static.hpp
include/uLocator/objectiveFunctions/: doubleDifferenceL1.hpp  l1.hpp  leastSquares.hpp  lp.hpp  objectiveFunction.hpp
include/uLocator/optimizers/: optimizer.hpp  originTime.hpp
include/uLocator/optimizers/nlopt/: boundOptimizationByQuadraticApproximation.hpp  dividedRectangles.hpp  methodOfMovingAsymptotes.hpp  stochasticGradientOptimization.hpp
include/uLocator/optimizers/pagmo/: particleSwarm.hpp
include/uLocator/optimizers/prima/: boundOptimizationByQuadraticApproximation.hpp
include/uLocator/position/: geographicPoint.hpp  geographicRegion.hpp  knownLocalLocation.hpp  knownUtahEvent.hpp  knownUtahQuarry.hpp  knownYNPEvent.hpp  utah.hpp  utahQuarry.hpp  utahRegion.hpp  wgs84.hpp  ynp.hpp  ynpRegion.hpp
include/uLocator/topography/: constant.hpp  gridded.hpp  topography.hpp
lib/: arrival.cpp  h5io.hpp  origin.cpp  originTime.hpp  rayTracer.cpp  station.cpp  travelTimeCalculator.cpp  travelTimeCalculatorMap.cpp  uussRayTracer.cpp  weightedMean.hpp  weightedMedian.hpp
lib/corrections/: sourceSpecific.cpp  static.cpp
lib/optimizers/: objectiveFunctions.hpp  optimizer.cpp  originTime.cpp
lib/optimizers/nlopt/: boundOptimizationByQuadraticApproximation.cpp  dividedRectangles.cpp  methodOfMovingAsymptotes.cpp  objectiveFunction.hpp  stochasticGradientOptimization.cpp
lib/optimizers/pagmo/: fitnessFunctions.hpp  particleSwarm.cpp
lib/optimizers/prima/: boundOptimizationByQuadraticApproximation.cpp  objectiveFunction.hpp
lib/position/: geographicPoint.cpp  knownUtahEvent.cpp  knownUtahQuarry.cpp  knownYNPEvent.cpp  utahQuarries.hpp  utahQuarry.cpp  utahRegion.cpp  wgs84.cpp  ynpRegion.cpp
lib/ray/: layerSolver.cpp  layerSolver.hpp  layerTracer.hpp  optimize.hpp  path2d.cpp  point2d.cpp  point2d.hpp  segment2d.hpp
python/: dataStructures.cpp  dataStructures.hpp  pyulocator.cpp  rayTracers.cpp  rayTracers.hpp
scripts/: Dockerfile.base.u24  Dockerfile.ubuntu24
src/: computeCorrections.cpp  defaultUtahQuarries.hpp  estimateVelocities.cpp  evaluateCorrections.cpp  firstArrivalRayTracer.cpp  homogeneous.cpp  knownEvents.hpp  loadCatalog.hpp  nlopt.cpp  nloptOptions.cpp  origin.cpp  quarry.cpp  searchStations.hpp  sourceSpecificStationCorrection.cpp  staticCorrection.cpp  station.cpp  topography.cpp  travelTimeCalculatorMap.cpp  travelTimeDatabase.hpp  ulocate.cpp  utahQuarries.hpp  uussRayTracer.cpp  uussTravelTimeCaclulator.cpp  version.cpp  weightedMean.hpp  weightedMedian.hpp
src/corrections/: sourceSpecific.cpp  static.cpp
src/objectiveFunctions/: a.out  doubleDifferenceL1.cpp  l1.cpp  leastSquares.cpp  lp.cpp  objectiveFunction.cpp  optimizeSourceTime.hpp  sgn.hpp  test.cpp
src/optimizers/: objectiveFunctions.hpp  optimizer.cpp
src/optimizers/nlopt/: dividedRectangles.cpp  objectiveFunction.hpp
src/optimizers/pagmo/: fitnessFunctions.hpp  particleSwarm.cpp
src/position/: geodetic.hpp  lonTo180.hpp  utah.cpp  wgs84.cpp  ynp.cpp
src/ray/: layerSolver.cpp  layerSolver.hpp  layerTracer.hpp  length.hpp  optimize.hpp  path2d.cpp  path2d.hpp  segment2d.cpp
src/topography/: constant.cpp  gridded.cpp
testing/: arrival.cpp  corrections.cpp  example.cpp  halfSpace.cpp  halfSpaceUtilities.hpp  homogeneous.cpp  nlopt.cpp  objectiveFunctions.cpp  origin.cpp  originTime.cpp  pagmo.cpp  position.cpp  rayTracer.cpp  station.cpp  topography.cpp  travelTimeDatabase.cpp
